[package]
name = "bevy_space_invaders"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.24.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
